# hyrox-race-insights

./: .gitignore  README.md  SECURITY.md  app.py  index.html  main-Q3WPAKX4.js  pyproject.toml  stats.py  styles-JIVDTWON.css
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yml  setup.yml  sponsors.yml  stats.yml  test.yml
app/: .prettierignore  angular.json  package-lock.json  package.json  tailwind.config.js
app/src/: main.server.ts  main.ts  server.ts
app/src/app/: app.config.server.ts  app.config.ts  app.routes.server.ts  app.routes.ts  app.spec.ts  app.ts  dashboard.component.html  dashboard.component.ts
app/src/app/components/event-breakdown/: event-breakdown.component.html  event-breakdown.component.ts  event-chart.component.html  event-chart.component.ts
app/src/app/components/heart-rate-insights/: heart-rate-insights.component.html  heart-rate-insights.component.ts
app/src/app/components/metrics-overview/: metrics-overview.component.html  metrics-overview.component.ts
app/src/app/components/percentile-chart/: percentile-chart.component.html  percentile-chart.component.ts
app/src/app/components/race-insights/: race-insights.component.html  race-insights.component.ts
app/src/app/models/: chart-config.model.ts  event-breakdown.model.ts  heart-rate.model.ts  index.ts  percentile-chart.model.ts  race-config.model.ts  race-data.model.ts  race-insights.model.ts
app/src/app/services/: heart-rate.service.ts  index.ts  race-config.service.ts  race-data.service.ts
app/src/app/utils/: event-order.ts  formatters.ts
data/: config.json  race.json
tests/: test_app.py
