[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyrox-race-insights"
version = "0.1.0"
description = "🏃✨ A terminal-based analytics tool that visualizes your Hyrox race data, highlights strengths and weaknesses, and provides actionable insights to help you improve your time."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "James Ives", email = "iam@jamesiv.es"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyrox-client>=0.2.3",
    "pandas>=2.0",
    "rich>=13.0.0",
    "dash>=2.0",
    "plotly>=5.0",
    "dash-bootstrap-components>=1.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
py-modules = ["stats"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true